# taitac

./: .env-example  .gitignore  .pre-commit-config.yaml  00_core.ipynb  README.md  _quarto.yml  environment.yml  index.ipynb  notes.ipynb  pyproject.toml  requirements.dev.txt  requirements.txt  settings.ini
_docs/: robots.txt
data/2k-data/: 2k-columns.txt  example.csv  merged_data.csv
docs/: architecture.md  background.md
experiments/: Functions-ReAct.ipynb  README.md  local-llama.ipynb
models/: README.md
src/taitac/: mapper.py
taitac/: _modidx.py
tests/: test_sotab_cpa.py
