[project]
name = "taitac"
version = "0.0.1"
description = ""
authors = [
    {name = "James Sweet", email = "james.sweet@protonmail.com"},
]
dependencies = [
    "pandas>=2.1.3",
    "openai>=1.2.4",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-sugar>=0.9.7",
]
